--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,27 @@
 spring.application.name=hotel-reservation-system
 
+
+# ----------------------------
+# DATABASE CONFIG (placeholder)
+# ----------------------------
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ----------------------------
+# SERVER CONFIG
+# ----------------------------
+
+server.port=8080
+
+# ----------------------------
+# DISABLE SECURITY AUTO CONFIG
+# ----------------------------
+
+spring.security.enabled=false
+security=false
