--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,18 @@
 spring.application.name=hotel-reservation-system
 
-
 # ----------------------------
-# DATABASE CONFIG (placeholder)
+# DATABASE CONFIG (placeholder via env vars)
 # ----------------------------
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/hotel_db}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:postgres}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/hotel_db
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_DDL_AUTO:none}
+spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL:true}
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ----------------------------
 # SERVER CONFIG
 # ----------------------------
 
-server.port=8080
-
-# ----------------------------
-# DISABLE SECURITY AUTO CONFIG
-# ----------------------------
-
-spring.security.enabled=false
-security=false
+server.port=${SERVER_PORT:8080}
